# k8s-generic-pod-mutator

./: Dockerfile  LICENSE  README.md  local.cluster.yaml  pyproject.toml  shell.nix
helm/chart/: Chart.yaml  values.yaml
helm/chart/templates/: NOTES.txt  deployment.yaml  service.yaml
helm/chart/templates/tests/: test-connection.yaml
helm/k8s-generic-pod-mutator/templates/: _helpers.tpl  hpa.yaml  ingress.yaml  serviceaccount.yaml
k8s-generic-pod-mutator/: main.py
