[tool.poetry]
name = "k8s-generic-pod-mutator"
version = "0.1.0"
description = ""
authors = ["Jakub Waszkiewicz"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
